# quorum-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEMO-READINESS-P1-P3-RESULT.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  OBSERVABILITY-DEMO-RESULT.md  OPERATING_BLUEPRINT.html  OPS-HARDENING-CLOSEOUT-RESULT.md  OVERNIGHT-CONTINUATION.md  OVERNIGHT-RESULT.md  PHASE-0-BUILD-PROMPT.md  PRODUCT_IDEA.md  R2-RB4-to-S4-ULTRACODE-PROMPT.md  R2-S2-S4-ULTRACODE-PROMPT.md  R2-STAGE-A-TO-S4-ULTRACODE-PROMPT.md  R2-STAGE-B-TO-S4-ULTRACODE-PROMPT.md  README.md  UI_Fix_Plan.md  UI_UX_Audit_Report.md  docker-compose.yml  fly.toml  openapi.yaml  pyproject.toml  test_phase1_ui.py
.github/: CODEOWNERS
.github/codex/: pr-review.md
.github/workflows/: availability-check.yml  ci.yml  csp-smoke.yml  deploy-drift-watchdog.yml  deploy.yml  e2e.yml  error-rate-check.yml  eval.yml  feedback-audit.yml  flake-scan.yml  perf-sample.yml  seed-visual-baselines.yml  test.yml
_handoff-s4-golden-draft/: CALIBRATION-NOTES.md  GOLDEN-SET-README.md  flatten.py  golden-cases.json
_handoff-s4-golden-draft/cases/: batch-ai4567.json  batch-ai8-ts123.json  batch-amh4567.json  batch-amh8-ai123.json  batch-fc78-pd12.json  batch-fg1234.json  batch-fg5678.json  batch-hs3456.json  batch-hs789-re1.json  batch-lco3456.json  batch-lco7-nsp123.json  batch-nsp4567.json  batch-nsp8-amh123.json  batch-pd3456.json  batch-pd78-hs12.json  batch-re2345.json  batch-re67-lco12.json  batch-ts4567.json  factual-consensus-01.json  factual-consensus-02.json  factual-consensus-03.json  factual-consensus-0456.json
configs/: atlassian-artifact-map.json  backend-engineering-rules.json  content-publishing-rules.json  contract-governance-rules.json  enterprise-quality-rules.json  external-skill-map.json  external-skill-registry.json  external-skill-research-index.json  factory-gates.json  jira-issue-template.json  jira-statuses.json  skill-catalog.json  skill-onboarding-policy.json  skill-router.json  source-of-truth-sync.json  study-artifact-map.json  visual-media-standards.json
custom-skill-packs/generic-study-publishing-pack/: README.md
custom-skill-packs/orbi-ai-operating-model-pack/: AGENTS.md  CLAUDE.md  GEMINI.md  PLANS.md  PRODUCT_IDEA.md  README.md
diagrams/: 00-hero-diagram.md  01-c4-context.md  02-c4-container.md  03-c4-component.md  04-c4-module.md  10-mermaid-high-level.md  11-mermaid-low-level.md  12-mermaid-module-level.md  13-mermaid-sub-module-level.md  README.md
diagrams/excalidraw/: 10-high-level.excalidraw
docs/: 00-factory-console.md  00-start-here.md  01-product-brief.md  02-personas.md  02-stakeholder-map.md  03-source-of-truth.md  03-user-journeys.md  04-problem-statement.md  04-success-metrics.md  05-non-goals.md  06-assumptions.md  07-open-questions.md  08-prioritization.md  09-release-scope.md  09-roadmap.md  10-functional-requirements.md  100-industry-and-integration-practices.md  101-production-signals.md  102-customer-feedback.md  103-incident-learnings.md  104-next-iteration-backlog.md  105-external-skills-first-strategy.md  106-skill-onboarding-runbook.md  107-skills-sh-research-snapshot.md  108-session-management-with-external-skills.md  109-contract-and-schema-governance.md  11-non-functional-requirements.md  12-acceptance-criteria.md  13-open-questions.md  14-learner-spec.md  15-domain-glossary.md  16-edge-case-catalog.md  17-requirement-registry.md  18-requirement-traceability-matrix.md  19-change-control-log.md  19-signoff-record.md  20-architecture.md  21-domain-model.md  22-api-contract.md  23-data-model.md  (+82 more)
docs/adr/: 0001-initial-architecture.md  0002-sqlite-single-writer-ceiling.md
docs/analysis/: 00-index.md  (+13 more)
e2e/: package-lock.json  package.json  playwright.config.ts  requirements.txt  results.xml  run_playwright_tests.py  simple_workspace_tests.py
examples/: README.md  requirement-example.json
feedback/: STATUS.md  status.json
policies/: ai-governance-policy.md  api-policy.md  code-style-policy.md  compliance-policy.md  data-migration-policy.md  dependency-policy.md  engineering-policy.md  jira-confluence-policy.md  observability-policy.md  release-policy.md  review-policy.md  security-policy.md  supply-chain-policy.md  testing-policy.md  ux-policy.md  versioning-policy.md
schemas/: _common.schema.json  acceptance-criteria.schema.json  confluence-operational-guide.schema.json  jira-issue.schema.json  quality-gate.schema.json  requirement.schema.json  skill-contract.schema.json  traceability-link.schema.json
scripts/: apply_profile.py  audit_external_skill.py  capture_idea.py  check_breaking.py  deploy_gate.py  discover_external_skills.py  error_rate_probe.py  evals_summary.py  export_openapi.py  factory_next.py  fix_skill_contracts.py  onboard_external_skill.py  security_scan.py  seed_feedback_audit_data.py  session_handoff.py  skill_router.py  validate_all.py  validate_architecture.py  validate_docs.py  validate_enterprise_extensions.py  validate_fr_completeness.py  validate_openapi_contract.py  validate_publishing_backbone.py  validate_quality_contracts.py  validate_release.py  validate_security.py  validate_skill_onboarding.py  validate_tests.py  validate_traceability.py
tests/: conftest.py  helpers.py  test_day_one_carry_forward_audit.py  test_doc_gate_consistency.py  test_e2e_workflow_covers_all_invariant_specs.py  test_factory_console_claims.py  test_factory_console_quoted_output.py  test_findings_ledger_consistency.py  test_findings_ledger_fs5_status.py  test_findings_ledger_perf_numbers.py  test_findings_ledger_rb7_extra.py  test_fr_completeness_gate.py  test_fr_completeness_gate_declaration_parsing.py  test_fr_completeness_gate_evidence_anchor.py  test_fr_completeness_gate_parsing.py  test_metrics_docs_transcript_provenance.py  test_mutation_baseline_doc.py  test_quality_ledger_consistency.py  test_r2_plan_status_honesty.py  test_session_handoff_claims.py  test_store_concurrency.py  test_store_lifecycle.py  test_store_lifecycle_behaviour.py  test_store_shutdown_safety.py  test_ultracode_prompt_enforcement_contract.py
(+451 files in other folders)
