[project]
name = "quorum-ai"
version = "0.1.0"
description = "Multi-model LLM orchestration web app with sourced, synthesized answers"
requires-python = ">=3.12"
dependencies = [
  # C14: upper bounds on every dependency so a hostile or buggy
  # upstream release cannot silently introduce a behaviour change
  # or a security regression without a code review. The lower
  # bound stays open so we can pick up security patches; the
  # upper bound is the next major version (Pydantic v3, FastAPI
  # 1.0, etc.) so a major bump is an explicit decision rather
  # than something pip pulls in overnight.
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.30.0,<1.0",
  "pydantic-settings>=2.4.0,<3.0",
  # Sentry for error tracking in production. Optional - the app
  # boots without SENTRY_DSN set (it's a no-op). When the DSN is
  # present, exceptions and performance traces are reported to
  # the Sentry project configured for this deployment.
  "sentry-sdk[fastapi]>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0",
  "pytest-cov>=5.0.0,<7.0",
  "httpx>=0.27.0,<1.0",
  "ruff>=0.6.0,<2.0",
  "mypy>=1.11.0,<2.0",
  "playwright>=1.60.0,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]
