[project]
name = "quorum-ai"
version = "0.1.0"
description = "Multi-model LLM orchestration web app with sourced, synthesized answers"
requires-python = ">=3.12"
dependencies = [
  # C14: upper bounds on every dependency so a hostile or buggy
  # upstream release cannot silently introduce a behaviour change
  # or a security regression without a code review. The lower
  # bound stays open so we can pick up security patches; the
  # upper bound is the next major version (Pydantic v3, FastAPI
  # 1.0, etc.) so a major bump is an explicit decision rather
  # than something pip pulls in overnight.
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.30.0,<1.0",
  "pydantic-settings>=2.4.0,<3.0",
  # Sentry for error tracking in production. Optional - the app
  # boots without SENTRY_DSN set (it's a no-op). When the DSN is
  # present, exceptions and performance traces are reported to
  # the Sentry project configured for this deployment.
  "sentry-sdk[fastapi]>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0",
  "pytest-cov>=5.0.0,<7.0",
  "httpx>=0.27.0,<1.0",
  "ruff>=0.6.0,<2.0",
  "mypy>=1.11.0,<2.0",
  "playwright>=1.60.0,<2.0",
]
# R2 Phase-0 enforcement machinery. These are CI/quality-gate tools only —
# they are deliberately NOT in ``dependencies`` (and not in ``dev``) so the
# runtime Docker image never ships a mutation engine or a fuzzer. Install
# with ``uv sync --extra quality`` locally; CI already uses
# ``uv sync --all-extras``, which picks this up. Same C14 upper-bound rule as
# the runtime deps: open lower bound for patches, next-major upper bound so a
# breaking release is an explicit decision.
quality = [
  # P0-D: mutation testing (advisory gate, `make mutation-baseline`).
  "mutmut>=3.0.0,<4.0",
  # P0-F: API contract fuzzing against the app's own /openapi.json
  # (`make api-contract`, tests/contract).
  "schemathesis>=4.0.0,<5.0",
  # P0-G: changed-lines coverage vs origin/main (`make diff-cover`).
  "diff-cover>=9.0.0,<11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# ``make mutation-baseline`` (mutmut 3.x) copies the entire project into
# ./mutants/ and rewrites every function into a mutant dispatcher. Linting or
# formatting that generated tree is meaningless and turns `make lint` /
# `make format-check` red for anyone who has run the mutation gate locally.
extend-exclude = ["mutants"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
# Same reason as ruff's extend-exclude: ./mutants/ is generated by mutmut.
exclude = ["^mutants/"]

# ``yaml`` (PyYAML, a transitive dep via uvicorn[standard]) ships no type
# stubs; ``export_openapi`` / ``validate_openapi_contract`` are the OpenAPI
# generator/renderer and drift-guard under ``scripts/`` (not on
# ``mypy_path``), imported by the contract drift-guard test at runtime via a
# ``sys.path`` insert. None are type-checkable here, so silence the
# missing-import errors without weakening strictness elsewhere.
[[tool.mypy.overrides]]
module = ["yaml", "export_openapi", "validate_openapi_contract"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# R2 finding RB-1: coverage is now a GATE, not just a report. The floor is set
# from the measured baseline (88% at 2026-07-19) so it ratchets quality UP — a
# lower floor (e.g. 85) would legitimize a regression. Raise it as coverage
# improves; never lower it without a recorded reason. Per-changed-line coverage
# is enforced separately via diff-cover in CI (see Phase-0 gates).
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=88"
pythonpath = ["src"]

# R2 P0-D (ledger RB-7): mutation testing. Every value below was set from a
# measured run, not from taste — see docs/metrics/mutation-baseline.md for the
# raw numbers. mutmut 3.x copies the project into ./mutants/ and re-runs the
# suite once per mutant, so the settings are about keeping that copy hermetic
# and the per-mutant test set honest.
[tool.mutmut]
# ``src`` (not ``src/product_app``): the copied tree must still contain the
# ``src/httpx2`` shim or ``tests/unit/test_httpx2_compat.py`` fails to import
# and mutmut aborts before it runs a single mutant. Scope is narrowed by
# ``only_mutate`` instead.
source_paths = ["src"]
only_mutate = ["src/product_app/*.py"]
# ``also_copy`` is what the suite reads from the repo root but that mutmut
# would otherwise leave out of ./mutants/ — ``scripts`` in particular, without
# which tests/contract/test_openapi_contract.py cannot import export_openapi.
# ``Makefile``/``.github``/``R2-S2-S4-ULTRACODE-PROMPT.md`` are the gate-
# integrity inputs: tests/unit/test_makefile_gate_integrity.py and friends read
# them from ``REPO_ROOT``, which inside ./mutants/ is the copy. Leaving any of
# them out makes mutmut's stats-collection run fail and abort the whole gate
# before a single mutant is scored (measured: "failed to collect stats").
# ``.env`` is deliberately NOT copied: a developer's real DSN/API key must
# never reach a mutation run (hermetic, $0). ``.claude`` is not copied either
# (gitignored local settings); its specs skip when it is absent.
also_copy = [
  "scripts", "openapi.yaml", "configs", "docs", "policies", "profiles", "examples",
  "Makefile", ".github", "e2e/tests", "R2-S2-S4-ULTRACODE-PROMPT.md",
]
# --no-cov: the global --cov-fail-under=88 would fail every per-mutant partial
#   run, scoring every mutant "killed" and making the number meaningless.
# --deselect tests/test_store_lifecycle.py: those specs assert on GC/
#   ResourceWarning behaviour and fail under mutmut's stats instrumentation,
#   which retains frames (verified: they pass standalone inside ./mutants/).
# --deselect tests/test_store_shutdown_safety.py: same class — `close()` under
#   an unreleasable lock is a shutdown-timing assertion, and mutmut's
#   trampoline changes that timing. Measured on this tree: 3/3 pass at the repo
#   root, 3/3 fail inside ./mutants/, which aborted the whole run ("failed to
#   collect stats") before a mutant was scored.
# --ignore tests/perf tests/performance: latency/percentile specs are timing
#   gates, not behavioural oracles; including them pushed per-mutant runtime
#   past mutmut's timeout on every mutant of _persist_terminal_run (measured).
pytest_add_cli_args = [
  "-p", "no:randomly",
  "--no-cov",
  "-q",
  "--deselect", "tests/test_store_lifecycle.py",
  "--deselect", "tests/test_store_shutdown_safety.py",
  "--ignore", "tests/perf",
  "--ignore", "tests/performance",
]
